# Changelog

## Alpha 006 (Not yet released)

* Komplette Neuentwicklung auf neuer technologischer Basis
* TMX-Tilemap
* Sammelbare Münzen
* Verschiebbare Kisten
* Totenköpfe als Gegner
* Pymunk Physik-Engine
* Automatische Selbstheilung

## Alpha 004 (17.01.2024)

* Aufgabe mit Sprengstoff hinzugefügt
* Tretminen hinzugefügt
* Schwert hinzugefügt
* Tag-Nacht-Zyklus hinzugefügt
* Aktuelle Aufgabe wird jetzt angezeigt im Pausenmenü
* Grafik-Einstellungen feiner einstellbar
* Intro entfernt
* Maussteuerung entfernt
* Fehler im Handling der Tastatur-Events korrigiert
* Wenn man das Spiel pausiert, werden jetzt auch die Soundeffekte gestoppt

## Alpha 003 (09.01.2024)

* Intro
* Aufgabe mit Zahlencode hinzugefügt
* Hunde KI verbessert
* Dekoration hinzugefügt

## Alpha 002 (21.11.2023)

* Aufgabe mit Holzbrettern hinzugefügt
* Mehr Musik-Tracks
* Spielstände jetzt aufwärtskompatibel
* Experimentelle Maussteuerung
* Video-Einstellungen: Auflösungen kleiner als 640x480 entfernt
* Unterstützung für High DPI

## Alpha 001 (17.11.2023)

* Erster öffentlicher Alpha Build