@@ -36,7 +36,9 @@ options = {
             '../CREDITS.txt',
             '../README.txt',
             '../CHANGES.txt',
-            '../VERSION.txt'
+            '../VERSION.txt',
+            'Grunzi (Full HD).bat',
+            'Grunzi (4K).bat'
         ]
     }
 
