@@ -8,7 +8,12 @@
 * Verschiebbare Kisten
 * Totenköpfe als Gegner
 * Pymunk Physik-Engine
+* Man kann schießen
 * Automatische Selbstheilung
+
+## Alpha 005
+
+* Nicht veröffentlicht
 
 ## Alpha 004 (17.01.2024)
 
